Revise Valentine's themed content in index.html
Updated content in the HTML file to enhance the Valentine's theme.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ button:hover{
     <section class="slide one active">
         <div class="card">
             <div class="icon">💘</div>
-            <h1>Valentine Night</h1>
+            <h1>Happy Valentine Babess🫶</h1>
             <p>Soft moments, gentle hearts. Love feels beautiful with you.</p>
         </div>
     </section>
@@ -304,3 +304,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
